# Spartan

./: CLAUDE.md  Cargo.toml  build.rs  client_compatibility_analysis.md  cross_platform_opt.md
examples/: cross_platform_benchmark.rs  cubic.rs  nizk.rs  snark.rs  test_cross_platform_integration.rs  test_real_proof_generation.rs  test_simple_proof_generation.rs  test_thorough_backend_implementation.rs
profiler/: nizk.rs  snark.rs
scripts/: README.md  build-android.sh  build-ios.sh  build-mobile.sh  test-mobile.sh
src/: commitments.rs  dense_mlpoly.rs  errors.rs  lib.rs  r1cs.rs  r1csproof.rs  sparse_mlpoly.rs  sumcheck.rs
src/cross_platform/: backend.rs  benchmarks.rs  capabilities.rs  integrated_backends.rs  memory.rs  mobile.rs  mod.rs  native_opt.rs  spartan_integration.rs  tests.rs  univariate_skip.rs  wasm.rs
src/mobile/: adaptive_vectors.rs  internal.rs  memory_manager.rs  mod.rs
src/nizk/: mod.rs
src/scalar/: mod.rs
strategies/: arms.md  cryptographic_security.md  deployment.md  memory_mgm.md  performance_profiling.md  platform.md
